# aws-savings

./: .gitignore  README.md  calculate_per_instance.ipynb  pyproject.toml
aws_savings/: main.py
aws_savings/models/: savings_request.py
aws_savings/services/: savings_calculator.py
aws_savings/utils/: utils.py
notebooks/: calculate_per_instance_interactive.ipynb
src/: main.py
src/services/: savings_calculator.py
