[tool.poetry]
name = "aws_savings"
version = "0.1.0"
description = "Technical task for Efficio"
authors = ["francisco@caldas.pt"]
packages = [
    { include = "aws_savings" }
]


[tool.black]
line-length = 120

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.2.3"
fastapi = "^0.115.8"
pydantic = "^2.10.6"
ipywidgets = "^8.1.5"
ipykernel = "^6.29.5"
uvicorn = "^0.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

